--- a/exp2/实验二.md
+++ b/exp2/实验二.md
@@ -3,3 +3,49 @@
 ## 实验内容
 
 - 针对单表查询，连接查询，嵌套查询这三种SQL操作，查看查询分析器给出的查询计划，分析优化效果。
+
+- 单表查询（只涉及一个表的查询）
+
+- 连接查询 （内连接，外连接 和交叉连接）通过连接运算符可以实现多个表的查询。
+
+- 嵌套查询 
+    - in 嵌套查询
+        in关键字用于where子句中用来判断查询的表达式是否在多个值的列表中。返回满足in列表中的满足条件的记录。 
+        ```
+        select name from person
+        where countryid in
+        (
+            select countryid from country
+            where countryname = 'China'
+        )
+        ```       
+    - some 嵌套查询
+        some在sql中的逻辑运算符号，如果在一系列比较中，有些值位true，那么结果就为True。some的语法是：
+        ```
+        select name from person
+        where countryid = some  --用等号和以下查询到的值比较，如果与其中一个相等，就返回
+        (
+            select countryid from country
+            where countryname = 'China'
+        )
+        ```
+    - all 嵌套查询
+        all是sql中的逻辑运算符好，如果一系列的比较都为true，那么结果才能为true。
+        ```
+            select name from person
+            where countryid > all --当countryid大于以下返回的所有id，此结果才为true，此结果才返回
+            (
+                select countryid from country
+                where countryname = 'China'
+            )            
+        ```       
+    - exists 嵌套查询
+        exists是sql中的逻辑运算符号。如果子查询有查询结果集返回，那么返回true。exist代表'存在'的意义，它只查找满足条件，找到第一个匹配的记录后，就马上停止查找。
+
+        ```
+        select * from person
+        where exists
+        (
+            select 1 //select 0 select null 返回结果都一样，因为这三个子查询都有结果集返回，因此总是True
+        )
+        ```       
