--- a/exp2/实验二.md
+++ b/exp2/实验二.md
@@ -49,3 +49,28 @@
             select 1 //select 0 select null 返回结果都一样，因为这三个子查询都有结果集返回，因此总是True
         )
         ```       
+        ```
+        show databases;
+use exp1;
+select * from student;
+
+create table teacher(
+ department_name VARCHAR(20) NOT NULL,
+ name VARCHAR(20) NOT NULL
+ );
+insert into teacher (department_name,name) VALUES ("计算机","李四");
+
+select * 
+from student
+left join teacher
+on student.department_name=teacher.department_name;
+
+
+
+select * 
+from student
+where ID in (
+	select ID
+    from student
+);
+        ```
